src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__settings_teams_parity__teams_tab_empty_renders_80x24.snap
---
source: src/tui/snapshot_tests/settings_teams_parity.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "entries: (empty — focus to edit)                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
