src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__settings_teams_parity__teams_tab_one_entry_with_role_overrides_renders_80x24.snap
---
source: src/tui/snapshot_tests/settings_teams_parity.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "entries: (1 entry — focus to edit)                                              ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
